# obyra-backup

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .replit  CACHING_GUIDE.md  CONCURRENCY_ANALYSIS.md  DEPLOY_PRODUCTION.md  Dockerfile  FINAL_POSTGRESQL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTRUCCIONES_FIX_COMPLETO.md  INSTRUCCIONES_FIX_SEGURIDAD.md  INSTRUCCIONES_REINICIAR.md  LOCAL_DEV_SETUP.md  LOGGING_IMPLEMENTATION.md  MANUAL_USUARIO_OBYRA.md  MIGRATIONS_GUIDE.md  Makefile  PHASE_3_SUMMARY.md  PHASE_4_PLAN.md  PHASE_4_SUMMARY.md  PORTS.md  POSTGRESQL_OPTIMIZATIONS.md  Procfile  README.md  REFACTORING_SUMMARY.md  SECURITY_IMPROVEMENTS.md  SERVICES_GUIDE.md  SESION_2025-11-25_RESUMEN.md  SETUP_RAPIDO.md  URGENT_FIXES_SUMMARY.md  VERIFICATION_REPORT.md  _migrations_runtime_old.py  account.py  admin_equipos_leiten.py  admin_metrics.py  agent_local.py  alembic.ini  (+105 more)
.claude/: settings.json  settings.local.json
alembic/: env.py  script.py.mako
app/: __init__.py  config.py  extensions.py
attached_assets/: Pasted--1-Excavaci-n-1-Replanteo-del-terreno-2-Desmonte-y-limpieza-3-Excavaci-n-general-4-Ejecuc-1754740960171_1754740960172.txt  Pasted--Contexto-En-el-Wizard-de-Obras-Paso-1-Cat-logo-de-Etapas-al-pasar-a-Paso-2-se-hace-un-POST--1758246235775_1758246235776.txt  Pasted--DOCTYPE-html-html-lang-es-head-meta-charset-UTF-8-meta-name-viewport-con-1753804862316_1753804862317.txt  Pasted--FUNCIONES-YA-OPERATIVAS-El-presupuesto-ya-no-se-convierte-autom-ticamente-en-obra-al-crearse-El--1754234588628_1754234588629.txt  Pasted--Fase-0-Estabilizar-lo-b-sico-antes-de-EVM-Objetivo-que-el-admin-vea-avances-con-fotos-y--1757951147689_1757951147690.txt  Pasted--OBYRA-Market-Entrega-para-Replit-MVP-ML-like-con-seller-masking-Orden-de-Compra--1756827102563_1756827102564.txt  Pasted--OBYRA-Market-Especificaci-n-tipo-Mercado-Libre-MVP-Pro-Objetivo-Construir-un-marketpla-1756826344403_1756826344404.txt  Pasted--Operario-no-ve-tareas-y-falla-Obras-con-operario-1-Contexto-r-pido-Roles-admin-pm-operario--1757388802290_1757388802291.txt  Pasted--WIZARD-Iniciando-sistema-estabilizado-wizard-js-588-WIZARD-Sistema-estabilizado-cargado-1758252392983_1758252392983.txt  Pasted--WIZARD-Iniciando-sistema-estabilizado-wizard-js-605-WIZARD-Sistema-estabilizado-cargado-1758252806901_1758252806902.txt  Pasted--extends-base-html-block-title-Obras-OBYRA-IA-endblock-block-content--1754046209228_1754046209228.txt  Pasted--tulo-Dashboard-Feed-de-Actividad-con-origen-en-Alertas-Notificaciones-Contexto-La-tarjeta-Act-1756494618931_1756494618932.txt  Pasted-1-Adapter-de-navegaci-n-mata-el-error-gotoPaso-Ponelo-una-sola-vez-arriba-del-JS-del-wizard--1758069860219_1758069860220.txt  Pasted-1-Bot-n-Wizard-Tareas-que-abra-SIEMPRE-el-modal-Reemplaz-el-handler-que-chequea-etapas-antes--1758048639520_1758048639521.txt  Pasted-1-En-la-etapa-deben-verse-solo-las-tareas-creadas-no-todo-el-cat-logo-Qu-pasa-hoy-despu-s-del--1758080512982_1758080512982.txt  Pasted-1-Estructura-general-Eliminar-el-mapa-del-dashboard-se-mantiene-solo-en-el-m-dulo-Obras-Agre-1755254793192_1755254793193.txt  Pasted-1-Modal-Avance-unidad-bloqueada-fotos-m-ltiples-Modal-div-id-modal-avance-class-1757940523763_1757940523764.txt  (+121 more)
blueprint_presupuestos/: __init__.py  analisis_ia.py  calculadora.py  core.py  cotizar_wa.py  ejecutivo.py  (+8 more)
(+555 files in other folders)
