[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "reportlab>=4.4.2",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "authlib>=1.6.0",
    "requests>=2.32.4",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.5",
    "openai>=1.97.1",
    "pypdf2>=3.0.1",
    "weasyprint>=66.0",
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "mercadopago>=2.3.0",
    "python-dotenv>=1.0.1",
]
