[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

dependencies = [
    "authlib~=1.6.5",
    "flask~=3.1.1",
    "flask-login~=0.6.3",
    "flask-sqlalchemy~=3.1.1",
    "alembic~=1.13.3",
    "gunicorn~=23.0.0",
    "jinja2~=3.1.4",
    "matplotlib~=3.10.5",
    "mercadopago~=2.3.0",
    "openai~=1.97.1",
    "openpyxl~=3.1.5",
    "pillow~=11.3.0",
    "psycopg[binary]>=3.2,<3.3",   # reemplaza psycopg2-binary por psycopg v3
    "pypdf2~=3.0.1",
    "reportlab~=4.4.2",
    "requests~=2.32.3",
    "sqlalchemy~=2.0.41",
    "werkzeug~=3.1.3",
    "weasyprint~=66.0",
    "xlsxwriter~=3.2.5",
]

